--- a/headers.tex
+++ b/headers.tex
@@ -29,8 +29,13 @@
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{corollary}[theorem]{Corollary}
 \newtheorem{lemma}[theorem]{Lemma}
-\newtheorem{definition}{Definition}[section]
+\newtheorem{definition}[theorem]{Definition}
 \newtheorem{fact}[theorem]{Fact}
+\newtheorem{observation}[theorem]{Observation}
+\newtheorem{proposition}[theorem]{Proposition}
+\newtheorem{assumption}[theorem]{Assumption}
+\newtheorem{remark}[theorem]{Remark}
+\newtheorem{claim}[theorem]{Claim}
 
 % \newcommand{\proof}{{\bf Proof.}\hskip 0.3truecm}
 % \newcommand{\endproof}{\quad \(\Box\)}
@@ -51,15 +56,19 @@
 \newcommand{\myord}[1]{{#1}^{\rm{th}}}
 \newcommand{\rea}{\mathbb{R}}
 \newcommand{\gr}{\mathcal{G}}
-\newcommand{\vecd}{\bsym{d}}
 \newcommand{\veca}{\bsym{a}}
 \newcommand{\vecb}{\bsym{b}}
+\newcommand{\vecd}{\bsym{d}}
 \newcommand{\vece}{\bsym{e}}
-\newcommand{\allone}{\bsym{1}}
+\newcommand{\vecq}{\bsym{q}}
+\newcommand{\vecone}{\bsym{1}}
 \newcommand{\vecl}{\bsym{l}}
 \newcommand{\vecv}{\bsym{v}}
 \newcommand{\vecpi}{\bsym{\pi}}
+\newcommand{\vecpsi}{\bsym{\psi}}
 \newcommand{\vecx}{\bsym{x}}
+\newcommand{\vecy}{\bsym{y}}
+\newcommand{\vecz}{\bsym{y}}
 
 \newcommand{\pscr}{\mathscr{P}}
 \newcommand{\cscr}{\mathscr{C}}
@@ -71,19 +80,24 @@
 \newcommand{\matd}{\bsym{D}}
 \newcommand{\mata}{\bsym{A}}
 \newcommand{\matb}{\bsym{B}}
-\newcommand{\matw}{\bsym{W}}
-\newcommand{\matp}{\bsym{P}}
-\newcommand{\matpdistr}{\bsym{P}'}
 \newcommand{\matf}{\bsym{F}}
 \newcommand{\matfstar}{\bsym{F}^*}
 \newcommand{\mati}{\bsym{I}}
+\newcommand{\matj}{\bsym{J}}
+\newcommand{\matm}{\bsym{M}}
+\newcommand{\matp}{\bsym{P}}
+\newcommand{\matpdistr}{\bsym{P}'}
 \newcommand{\matq}{\bsym{Q}}
 \newcommand{\matr}{\bsym{R}}
 \newcommand{\mats}{\bsym{S}}
+\newcommand{\matw}{\bsym{W}}
 \newcommand{\matx}{\bsym{X}}
 \newcommand{\maty}{\bsym{Y}}
 \newcommand{\matz}{\bsym{Z}}
 \newcommand{\matpi}{\bsym{\Pi}}
+
+\newcommand{\tilmatz}{\widetilde{\matz}}
+\newcommand{\Otil}{\widetilde{O}}
 
 \newcommand{\lemref}[1]{Lemma~\ref{#1}}
 \newcommand{\thmref}[1]{Theorem~\ref{#1}}
